<resources>
    <string name="app_name">GpsDriver</string>

     
    <string name="prompt_email"> Email </string>
        
    <string name="prompt_password"> Password </string>
    <string name="action_sign_in_short"> sign in </string>
    <string name="search">Search</string>
    <string name="no_result">No Result Found</string>
    <string name="prompt_carN">Car Number</string>
    <string name="prompt_carInfo">Car Info</string>
    <string name="finish">Finish</string>
    <string name="show_deliveries">Show Deliveries</string>
    <string name="images_tosent">Images to be sent </string>
    <string name="submit">Submit</string>
    <string name="no_photos">No Photos</string>
    <string name="status">Status </string>
    <string name="logout">Logout </string>
    <string name="vehicle_number">Vehicle Number </string>
    <string name="no_order">No Order</string>
    <string name="delivered">delivered </string>
    <string name="waiting">waiting </string>
    <string name="customer_detail">Customer Detail </string>
    <string name="restaurant_name">Restaurant Name: </string>
    <string name="name">Name: </string>
    <string name="phone">Phone: </string>
    <string name="address">Address: </string>
    <string name="zip">Zip: </string>


    <string-array name="carArray">
        <item>Car 1</item>
        <item>Car 2</item>
        <item>Car 3</item>
        <item>Car 4</item>
        <item>Car 5</item>
        <item>Car 6</item>
        <item>Car 7</item>
        <item>Car 8</item>
        <item>Car 9</item>
        <item>Car 10</item>
        <item>Car 11</item>
        <item>Car 12</item>
        <item>Car 13</item>
        <item>Car 14</item>
        <item>Car 15</item>
        <item>Car 16</item>
        <item>Car 17</item>
        <item>Car 18</item>
        <item>Car 19</item>
        <item>Car 20</item>
    </string-array>
    <string-array name="vehicleNames">
        <item>YP2095H</item>
        <item>GBF6032M</item>
        <item>GBD498C</item>
        <item>GBD5898Z</item>
        <item>GBG9001C</item>
        <item>GBG3898X</item>
        <item>GBC7432B</item>
        <item>GBG7570P</item>
        <item>GBG8543H</item>
        <item>GBG8358E</item>
    </string-array>

</resources>
