<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh"
        android:title="Refresh"
        android:icon="@drawable/ic_autorenew_white_24dp"
        app:showAsAction="always"/>



    <item
    android:id="@+id/name"
    android:title="Name"

    app:showAsAction="always"/>

    <item
        android:id="@+id/searchid"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"

        />
  <item
        android:id="@+id/show_deliveries"
        android:title="@string/show_deliveries"
      android:orderInCategory="100"
      app:showAsAction="ifRoom|withText"></item>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:text="logout"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"></item>


</menu>